[emall-sso] sso模块完成,文档整理完成

--- a/doc/4.SSO单点登录/1.登录.md
+++ b/doc/4.SSO单点登录/1.登录.md
@@ -8,7 +8,7 @@ V1.0|路家豪|2017年10月16日|
 
 ### 请求说明
 > 请求方式：POST<br>
-请求URL ：`http://localhost:8081/rest/user/login`
+请求URL ：`http://localhost:8084/user/login`
 
 ### 请求参数
 字段|字段类型|字段说明
