--- a/doc/4.SSO单点登录/2.登录.md
+++ b/doc/4.SSO单点登录/2.登录.md
@@ -1,22 +1,20 @@
-## 注册
+## 登录
 > 
 
 ### 版本
 APP版本号|更新人|更新时间|更新内容
 ---|---|---|---
-V1.0|路家豪|2017年10月18日|
+V1.0|路家豪|2017年10月16日|
 
 ### 请求说明
 > 请求方式：POST<br>
-请求URL ：`http://localhost:8084/user/register`
+请求URL ：`http://localhost:8084/user/login`
 
 ### 请求参数
 字段|字段类型|字段说明
 ---|---|---
 username  |String |用户名
 password  |String |密码
-phone  |String |手机号
-email  |String |邮箱
 
 ### 返回参数
 字段  |字段类型   |字段说明
