--- a/doc/4.SSO单点登录/7.校验找回密码答案是否正确.md
+++ b/doc/4.SSO单点登录/7.校验找回密码答案是否正确.md
@@ -1,29 +1,28 @@
-## 登录
+## 校验找回密码答案是否正确
 > 
 
 ### 版本
 APP版本号|更新人|更新时间|更新内容
 ---|---|---|---
-V1.0|路家豪|2017年10月16日|
+V1.0|路家豪|2017年10月21日|init
 
 ### 请求说明
 > 请求方式：POST<br>
-请求URL ：`http://localhost:8084/user/login`
+请求URL ：`http://sso.emall.com:8084/user/validPwdAnswer`
 
 ### 请求参数
 字段|字段类型|字段说明
 ---|---|---
 username  |String |用户名
-password  |String |密码
-phone  |String |手机号
-email  |String |邮箱
+question  |String |找回密码问题
+answer  |String |找回密码答案
 
 ### 返回参数
 字段  |字段类型   |字段说明
 ---|---|---
 status  |int |状态码
-msg  |String |信息
-data  |String |token信息
+msg  |String |消息
+data  |String |找回密码校验token
 
 
 ### 返回结果
@@ -31,11 +30,6 @@ data  |String |token信息
 {
     "status": 200,
     "msg": "OK",
-    "data": "5e26b825-3966-495f-9daf-a5f677542b42"
-}
-{
-    "status": 500,
-    "msg": "用户名或密码为空",
-    "data": null
+    "data": "8411f1a8-bc60-4032-b536-d3284729cbf5"
 }
 ``` 
